--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "heroku": "^7.47.6",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "node": "^15.4.0"
   }
 }
