--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "Burger",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "core",
+  "root": "/usr/local/lib/node_modules/heroku",
+  "name": "@heroku-cli/plugin-ci",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
