--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "### Motivation",
   "main": "server.js",
+  "type": "core",
+  "root": "/usr/local/lib/node_modules/heroku",
+  "name": "@heroku-cli/plugin-ci",
+
   "dependencies": {
     "accepts": "^1.3.7",
     "array-flatten": "^1.1.1",
