--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "@heroku-cli/plugin-ci",
+  "name": "Burger",
   "version": "1.0.0",
   "description": "### Motivation",
   "main": "server.js",
   "type": "core",
   "root": "/usr/local/lib/node_modules/heroku",
+  "name": "@heroku-cli/plugin-ci",
+
   "dependencies": {
     "accepts": "^1.3.7",
     "array-flatten": "^1.1.1",
@@ -38,7 +40,7 @@
     "graceful-fs": "^4.2.4",
     "growl": "^1.7.0",
     "handlebars": "^4.7.6",
-    "heroku": "^7.47.6",
+    "heroku": "^0.2.0",
     "http-errors": "^1.7.2",
     "iconv-lite": "^0.4.24",
     "inflight": "^1.0.6",
