--- a/package.json
+++ b/package.json
@@ -100,6 +100,20 @@
     "wordwrap": "^1.0.0",
     "wrappy": "^1.0.2"
   },
+
+
+    "development": {
+      "username": "root",
+      "password": "password",
+      "database": "burgers_db",
+      "host": "127.0.0.1",
+      "dialect": "mysql"
+
+    },
+    "production": {
+      "use_env_variable": "JAWSDB_URL",
+      "dialect": "mysql"
+    },
   "devDependencies": {
     "coffee-script": "^1.10.0"
   },
